自定义View---泡泡窗

--- a/app/src/main/res/values/attr.xml
+++ b/app/src/main/res/values/attr.xml
@@ -11,7 +11,9 @@
         <attr name="hyTitleTextSize"/>
     </declare-styleable>
 
-
+    <declare-styleable name="PopupView">
+        <attr name="popupview_color" format="color"/>
+    </declare-styleable>
 
 
 </resources>
