--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,10 +1,13 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 xmlns:app="http://schemas.android.com/apk/res-auto"
                 xmlns:tools="http://schemas.android.com/tools"
                 xmlns:hycustom="http://schemas.android.com/apk/res/com.hy.customview"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                tools:ignore="ResAuto">
+                tools:ignore="ResAuto"
+                android:orientation="vertical"
+                android:layout_marginLeft="10dp"
+    >
 
     <!--<com.example.customview01.view.CustomTitleView-->
         <!--android:layout_width="wrap_content"-->
@@ -21,9 +24,13 @@
         hycustom:hyTitleTextColor="#ff0000"
         hycustom:hyTitleTextSize="20sp"
         hycustom:hyTitleText="1234"
-        android:layout_centerInParent="true"
         android:padding="10dp"
+        android:layout_marginBottom="10dp"
        />
+    <com.hy.customview.view.PopupView
+        android:layout_width="100dp"
+        android:layout_height="60dp"
+        app:popupview_color="#44ffff"
+        />
 
-
-</RelativeLayout>
+</LinearLayout>
