--- a/app/src/main/res/values/attr.xml
+++ b/app/src/main/res/values/attr.xml
@@ -15,5 +15,15 @@
         <attr name="popupview_color" format="color"/>
     </declare-styleable>
 
+    <declare-styleable name="WaveView">
+        <attr name="wareCount" format="integer"/>
+        <attr name="wareWidth" format="integer"/>
+        <attr name="android:color"/>
+        <attr name="mode">
+            <enum name="circle" value="-1"/>
+            <enum name="triangle" value="-2"/>
+        </attr>
+    </declare-styleable>
+
 
 </resources>
