--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,44 +1,32 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 xmlns:app="http://schemas.android.com/apk/res-auto"
                 xmlns:tools="http://schemas.android.com/tools"
-                xmlns:hycustom="http://schemas.android.com/apk/res/com.hy.customview"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 tools:ignore="ResAuto"
                 android:orientation="vertical"
-                android:layout_marginLeft="10dp"
+                android:layout_margin="10dp"
     >
-
-    <!--<com.example.customview01.view.CustomTitleView-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--custom:titleText="3712"-->
-        <!--android:padding="10dp"-->
-        <!--custom:titleTextColor="#ff0000"-->
-        <!--android:layout_centerInParent="true"-->
-        <!--custom:titleTextSize="40sp" />-->
-
-    <com.hy.customview.view.ValidCodeView
-        android:layout_width="wrap_content"
+    <Button
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        hycustom:hyTitleTextColor="#ff0000"
-        hycustom:hyTitleTextSize="20sp"
-        hycustom:hyTitleText="1234"
-        android:padding="10dp"
-        android:layout_marginBottom="10dp"
-       />
-    <com.hy.customview.view.PopupView
-        android:layout_width="100dp"
-        android:layout_height="60dp"
-        app:popupview_color="#44ffff"
-        />
-    <com.hy.customview.view.WaveView
-        android:layout_width="200dp"
-        android:layout_height="200dp"
-        android:layout_marginTop="10dp"
-        app:wareWidth="10"
-        app:wareCount="15"
-        app:mode="circle"
-        />
+        android:text="自定义View---验证码"
+        android:onClick="onValidCodeView"/>
+
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="自定义View---波浪View"
+        android:onClick="onWaveView"/>
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="自定义View---泡泡窗"
+        android:onClick="onPopupView"/>
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="自定义View---圆形百分比(进度条)"
+        android:onClick="onCirclePercentView"/>
 
 </LinearLayout>
