--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -33,5 +33,11 @@
         android:layout_height="wrap_content"
         android:text="自定义View---简约折线图"
         android:onClick="onSimpleLineChart"/>
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="自定义View---仪表盘"
+        android:onClick="onPanelView"
+        />
 
 </LinearLayout>
