--- a/app/src/main/res/layout/activity_custonview.xml
+++ b/app/src/main/res/layout/activity_custonview.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -8,10 +8,18 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
                 android:id="@+id/rl"
+              android:orientation="vertical"
     >
 
-    <com.hy.customview.view.CustomView
-        android:id="@+id/customView"
+    <!--<com.hy.customview.view.CustomView-->
+        <!--android:id="@+id/customView"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="0dp"-->
+        <!--android:layout_weight="1"/>-->
+
+    <com.hy.customview.view.CircleView
+        android:id="@+id/circleView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
-</RelativeLayout>
+        android:layout_height="0dp"
+        android:layout_weight="1"/>
+</LinearLayout>
